--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,19 @@
 name: koyo
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  google_nav_bar: ^5.0.6
+  provider: ^6.0.0
+  zoom_tap_animation: ^1.1.0
+  table_calendar: ^3.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
